--- a/ConsoleApp5/GenericsExamples.csproj
+++ b/ConsoleApp5/GenericsExamples.csproj
@@ -44,8 +44,10 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Example.cs" />
+    <Compile Include="IEntity.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Repository.cs" />
     <Compile Include="Salaries.cs" />
   </ItemGroup>
   <ItemGroup>
